--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RailsMisterCocktail</title>
+    <title>Cocktails Menu | The best cocktails in the city</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -24,25 +24,15 @@
     <div class="navbar-wagon-right hidden-xs hidden-sm">
 
       <!-- Links -->
-      <%= link_to "Cocktails", "/cocktails", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Add cocktail", "/cocktails/new", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Cocktails menu", "/cocktails", class: "navbar-wagon-item navbar-wagon-link" %>
+      <%= link_to "Suggest a cocktail", "/cocktails/new", class: "navbar-wagon-item navbar-wagon-link" %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
+          <%= link_to "https://www.lewagon.com/milan", target: "_blank", class: "navbar-brand" do %>
           <%= image_tag "https://dwj199mwkel52.cloudfront.net/assets/lewagon-logo-square-fe76916e1b923ade71e253ae6dc031d936e5e8eebac4e26b0fbac650ea6ee360.png", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
-              <% end %>
-            </li>
-          </ul>
+          <% end  %>
         </div>
       </div>
 
