--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,11 +54,9 @@
 
 <div class="footer">
   <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/a-kravets" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://www.facebook.com/andriy.kravets.5" target="_blank"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.linkedin.com/in/andriykravets/" target="_blank"><i class="fab fa-linkedin"></i></a>
   </div>
   <div class="footer-copyright">
     This cocktail app is made with <i class="fas fa-heart"></i> at Le Wagon Milan
