--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,18 +1,20 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/274078/pexels-photo-274078.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
   <div class="container">
     <h1>The best <strong>cocktails</strong> in <strong>Milan</strong></h1>
-    <p>Change your life and drink only the best</p>
+    <p><span id="banner-typed-text"></span></p>
     <% cocktail1 = @cocktails.sample(1) %>
     <%= link_to "I'm feeling damn lucky!", cocktail_path(cocktail1), class: "btn btn-flat" %>
   </div>
 </div>
 
-<div class="container">
 
+
+<div class="container">
 <div class="cards">
 
 
     <% @cocktails.each do |cocktail| %>
+
     <%= link_to cocktail_path(cocktail) do %>
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
     <%= cocktail.name %>
@@ -21,4 +23,5 @@
 
     <% end %>
 </div>
+
 </div>
