--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -3,7 +3,7 @@
     <h1>The best <strong>cocktails</strong> in <strong>Milan</strong></h1>
     <p><span id="banner-typed-text"></span></p>
     <% cocktail1 = @cocktails.sample(1) %>
-    <%= link_to "I'm feeling damn lucky!", cocktail_path(cocktail1), class: "btn btn-flat" %>
+    <%#= link_to "I'm feeling damn lucky!", cocktail_path(cocktail1), class: "btn btn-flat" %>
   </div>
 </div>
 
