adding resources index

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <h1>The best <strong>cocktails</strong> in <strong>Milan</strong></h1>
     <p><span id="banner-typed-text"></span></p>
+    <% raise %>
     <% cocktail1 = @cocktails.sample(1) %>
     <%#= link_to "I'm feeling damn lucky!", cocktail_path(cocktail1), class: "btn btn-flat" %>
   </div>
